--- a/index.html
+++ b/index.html
@@ -14,22 +14,18 @@
             <div class="w-full lg:w-8/12 px-4 mx-auto mt-6">
                 <div
                     class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-blueGray-100 border-0">
-                    <div class="rounded-t bg-white mb-0 px-6 py-6">
-                        <div class="mt-6 text-center flex justify-between">
-                            <h6 class="text-blueGray-700 text-2xl font-bold">
+                        <div class="md:mt-6 mt-4 md:ml-8 px-6 py-6">
+                            <h6 class="text-slate-700 text-2xl font-bold">
                                 Create an account
                             </h6>
-                           
                         </div>
-                    </div>
                     <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
                         <form class="mt-4">
-
-                            <div class="flex flex-wrap">
+                            <div class="flex flex-wrap gap-y-2">
                                
                                 <div class="w-full lg:w-6/12 px-4">
                                     <div class="relative w-full mb-3">
-                                        <label class="block uppercase text-xs font-bold mb-2">
+                                        <label class="block uppercase text-xs font-bold mb-2 text-slate-600">
                                             First Name
                                         </label>
                                         <input type="text"
@@ -39,7 +35,7 @@
                                 </div>
                                 <div class="w-full lg:w-6/12 px-4">
                                     <div class="relative w-full mb-3">
-                                        <label class="block uppercase  text-xs font-bold mb-2">
+                                        <label class="block uppercase  text-xs font-bold mb-2 text-slate-600">
                                             Last Name
                                         </label>
                                         <input type="text"
@@ -49,7 +45,7 @@
                                 </div>
                                 <div class="w-full lg:w-6/12 px-4">
                                     <div class="relative w-full mb-3">
-                                        <label class="block uppercase  text-xs font-bold mb-2">
+                                        <label class="block uppercase text-xs font-bold mb-2 text-slate-600">
                                             Username
                                         </label>
                                         <input type="text"
@@ -59,7 +55,7 @@
                                 </div>
                                 <div class="w-full lg:w-6/12 px-4">
                                     <div class="relative w-full mb-3">
-                                        <label class="block uppercase text-xs font-bold mb-2">
+                                        <label class="block uppercase text-xs font-bold mb-2 text-slate-600">
                                             Password
                                         </label>
                                         <input type="password"
